<resources>
    <string name="app_name" translatable="false">Egyptian Writer</string>
    <string name="documents">Documents</string>
    <string name="no_documents">Hhm …    \nIt seems like if there are no documents jet…</string>
    <string name="add_document">Add</string>
    <string name="new_document_title">Create a new Document</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_create">Create</string>
    <string name="default_file_prefix">"Untitled "</string>
    <string name="error_empty_string">The name cannot be empty</string>
    <string name="error_invalid_string">This characters are not allowed: \" * / \\ : &lt; &gt; ? |</string>
    <string name="error_repeated_string">This name is already in use.</string>
    <string name="menu_item_export">Export</string>
    <string name="menu_item_delete">Delete</string>
    <string name="button_delete">Delete</string>
    <string name="delete_document">Delete this Document</string>
    <string name="delete_message_document">Do you really want to delete the document \"%s\"?\nThis action cannot be undone!</string>
    <string name="title_export">Export</string>
    <string name="button_save">SAVE</string>
    <string name="button_share">SHARE</string>
    <string name="share_title">Share file:</string>
    <string name="button_ok">OK</string>
    <string name="issue_code_title">This is the error code:</string>
    <string name="label_error_code">error code</string>
    <string name="error_unexpected_title">unexpected error</string>
    <string name="error_unexpected_text">An unexpected error has occurred, indicating a problem with the app. Please restart the app and check for updates.</string>
    <string name="issue_suffix">%s\n\nIf none of the above options help, copy the error code and send an email with the error code to the developer (website-tutorials@gmx.de).</string>
    <string name="menu_item_import_document">import document</string>
    <string name="menu_item_create_document">new document</string>
    <string name="import_document_title">Import this document</string>
    <string name="import_document_message">Choose a name for the document:</string>
    <string name="button_import">Import</string>
    <string name="menu_item_dashboard">Dashboard</string>
    <string name="menu_item_documents">Documents</string>
    <string name="menu_item_sign_list">Sign List</string>
    <string name="menu_item_group_editor">Group Editor</string>
    <string name="menu_item_vocabulary">Vocabulary</string>
    <string name="menu_item_dictionary">Dictionary</string>
    <string name="menu_item_preferences">Preferences</string>
    <string name="menu_item_about">About this App</string>
    <string name="navigation_description_text"><i>An free open source app</i>\nMade by: Georg Schierholt</string>
    <string name="about_version_name">Version: %s</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="no_vocab">Hhm …    \nIt seems like if there is no vocabulary jet…</string>
    <string name="add_vocab">Add</string>
    <string name="content_description_add_document">Add a document</string>
    <string name="content_description_add_vocab">Add vocabulary</string>
    <string name="menu_item_import_vocab">import vocabulary</string>
    <string name="menu_item_create_vocab">create vocabulary set</string>
    <string name="new_vocab_set_title">Create a new vocabulary set</string>
    <string name="new_vocab_set_description">Create a new vocabulary set to which you can add new vocabulary cards and learn them.</string>
    <string name="delete_vocab">Delete this vocabulary set</string>
    <string name="delete_message_vocab">Do you really want to delete the vocabulary set \"%s\"?\nThis action cannot be undone!</string>
    <string name="button_training">Training</string>
    <string name="button_practise">Practise</string>
    <string name="vocab_card_number_template">Card %d/%d</string>
    <string name="property_text_size_label">text size</string>
    <string name="property_layout_label">writing layout</string>
    <string name="content_description_writing_layout_lines">writing layout lines</string>
    <string name="content_description_writing_layout_columns">writing layout columns</string>
    <string name="content_description_vertical_orientation_top">move small signs to the top</string>
    <string name="content_description_vertical_orientation_middle">center small signs</string>
    <string name="content_description_vertical_orientation_bottom">move small signs to the bottom</string>
    <string name="content_description_writing_direction_ltr">left-to-right layout</string>
    <string name="content_description_writing_direction_rtl">right-to-left layout</string>
    <string name="error_broken_document_title">broken document</string>
    <string name="error_broken_document_text">This document is broken. If you imported it from outside the app, please try importing it again. If the problem continues or if you did not import the document, please restart the app and check for updates.</string>
    <string name="content_description_button_increase_text_size">Increase the text size.</string>
    <string name="content_description_button_decrease_text_size">Decrease the text size.</string>
    <string name="export_file_format">File format:</string>
    <string name="button_export">EXPORT</string>
    <string name="export_learn_more">Learn more about this filetype…</string>
    <string-array name="array_file_format">
        <item>EWDOC (Egyptian Writer Document)</item>
        <item>SVG (Scalable Vector Graphic)</item>
        <item>PNG (Portable Network Graphic)</item>
        <item>JPEG (Joint Photographic Experts Group)</item>
    </string-array>
    <string name="export_learn_more_ewdoc"><![CDATA[<b>EWDOC</b> files <i>(Egyptian Writer Document)</i> are this app\'s native files. They contain the MdC code, its GlyphX representation and the properties. The MdC and GlyphX code encodes the hieroglyphs, while the properties explain how to display the signs.<br>Because the format doesn\'t include image data, the files are very small and you can edit the hieroglyphic text easily. <br>However, this file format is only supported by the Egyptian Writer App. <br><b>Recommended for:</b> sharing hieroglyphic texts between users of this app and building backups of the documents]]></string>
    <string name="export_learn_more_svg"><![CDATA[<b>SVG</b> files <i>(Scalable Vector Graphic)</i> are images that are described by mathematical formulas rather than pixels.<br>This means they can easily be used in programs like Inkscape, do not become pixelated when zoomed in, and require less disk space than to other image formats.<br>However, please note that SVG files are not supported everywhere, and they do not contain hieroglyphic text. This means that you can only view the text and edit the signs, not the text itself.<br><b>Recommended for:</b> art, web applications, big posters and for importing into office programs such as LibreOffice or MS Word<br><b>Read more:</b> <a href="https://en.wikipedia.org/wiki/SVG">https://en.wikipedia.org/wiki/SVG</a>]]></string>
    <string name="export_learn_more_png"><![CDATA[<b>PNG</b> files <i>(Portable Network Graphic)</i>, unlike SVG files, save their content as pixels. Each pixel has a colour value. Together with other pixels, they shape the image. Although PNG files are lossless compressed, they still require much more disk space than SVG files and become pixelated very quickly, when zoomed in. <br>However, PNG files are supported by nearly every program and also contain an alpha channel, which allows you to make the background transparent.<br>Please note that, like every other image format, PNG files do not contain hieroglyphic text. This means that it is impossible to change the text content after exporting.<br><b>Recommended for:</b> sharing via messengers or email, printing, and for including in PDF documents<br><b>Read more:</b> <a href="https://en.wikipedia.org/wiki/PNG">https://en.wikipedia.org/wiki/PNG</a>]]></string>
    <string name="export_learn_more_jpeg"><![CDATA[<b>JPEG</b> files <i>(Joint Photographic Experts Group)</i>, like PNG files, save their content as pixels. Each pixel has a colour value. Together with other pixels, they shape the image. Unlike PNG files, JPEG files are compressed lossily. This results in lower quality, but also smaller file sizes.<br>Nevertheless, JPEG files still require much more disk space than SVG files and become pixelated very quickly, when zoomed in.<br>They also do not have an alpha channel, meaning the background cannot be transparent. However, JPEG files are supported by nearly every program and, because of their smaller file size, are suitable for sending via email.<br>Please note that, like every other image format, JPEG files do not contain hieroglyphic text. This means that it is impossible to change the text content after exporting.<br><b>Recommended for:</b> sharing via messengers or email<br><b>Read more:</b> <a href="https://en.wikipedia.org/wiki/JPEG">https://en.wikipedia.org/wiki/JPEG</a>]]></string>
    <string name="export_no_settings">There are no export settings for this filetype.\nYes, you hear it right! Just click that export button!</string>
    <string name="export_progress_title">Exporting...</string>
    <string name="export_processing">Processing</string>
    <string name="export_progress" formatted="true" translatable="false">%d / %d    %d%%</string>
    <string name="error_file_ran_out">File expired. Please export again!</string>
    <string name="export_svg_title">Add title to SVG file:</string>
    <string name="incorrect_mdc_code">MdC code is incorrect - rendering paused</string>
</resources>