<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_group_1"
        android:visible="true"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_item_documents"
            android:title="@string/documents"
            android:icon="@drawable/docs" />

        <item
            android:id="@+id/menu_item_sign_list"
            android:title="@string/menu_item_sign_list"
            android:icon="@drawable/dataset"/>

        <item
            android:id="@+id/menu_item_vocab"
            android:title="@string/menu_item_vocabulary"
            android:icon="@drawable/school"/>

    </group>

    <item
        android:id="@+id/menu_item_about"
        android:title="@string/menu_item_about"
        android:icon="@drawable/info"/>

</menu>