<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="500dp">

        <TextView
            android:id="@+id/title_text_size"
            style="@style/textViewNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/property_text_size_label"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/input_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/input_text_size" />

        <EditText
            android:id="@+id/input_text_size"
            style="@style/inputText"
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="numberSigned"
            android:maxLength="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/title_text_size"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/text_size_increase"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/icon_background"
            android:contentDescription="@string/content_description_button_increase_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/input_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/input_text_size"
            app:layout_constraintTop_toTopOf="@+id/input_text_size"
            app:srcCompat="@drawable/text_increase" />

        <ImageButton
            android:id="@+id/text_size_decrease"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/icon_background"
            android:contentDescription="@string/content_description_button_decrease_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/input_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/text_size_increase"
            app:layout_constraintTop_toTopOf="@+id/input_text_size"
            app:srcCompat="@drawable/text_decrease" />

        <TextView
            android:id="@+id/title_text_layout"
            style="@style/textViewNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/property_layout_label"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_text_size"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            app:flexDirection="row"
            app:flexWrap="wrap"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_text_layout">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.blueapps.egyptianwriter.CheckableImageButton
                    android:id="@+id/writing_layout_lines"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/icon_background"
                    android:checked="true"
                    android:clickable="false"
                    android:contentDescription="@string/content_description_writing_layout_lines"
                    android:layout_marginTop="4dp"
                    app:srcCompat="@drawable/table_rows_narrow"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="8dp" />

                <com.blueapps.egyptianwriter.CheckableImageButton
                    android:id="@+id/writing_layout_columns"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/icon_background"
                    android:contentDescription="@string/content_description_writing_layout_columns"
                    android:layout_marginTop="4dp"
                    app:srcCompat="@drawable/table_columns_narrow"
                    tools:layout_editor_absoluteX="52dp"
                    tools:layout_editor_absoluteY="8dp" />

                <LinearLayout
                    android:id="@+id/sep_1"
                    android:layout_width="2dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/settings_seperator"
                    android:orientation="horizontal"
                    tools:layout_editor_absoluteX="112dp"
                    tools:layout_editor_absoluteY="8dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.blueapps.egyptianwriter.CheckableImageButton
                    android:id="@+id/vertical_orientation_top"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/icon_background"
                    android:contentDescription="@string/content_description_vertical_orientation_top"
                    android:layout_marginTop="4dp"
                    app:srcCompat="@drawable/vertical_align_top"
                    tools:layout_editor_absoluteX="102dp"
                    tools:layout_editor_absoluteY="8dp" />

                <com.blueapps.egyptianwriter.CheckableImageButton
                    android:id="@+id/vertical_orientation_middle"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/icon_background"
                    android:checked="true"
                    android:clickable="false"
                    android:contentDescription="@string/content_description_vertical_orientation_middle"
                    android:layout_marginTop="4dp"
                    app:srcCompat="@drawable/vertical_align_center"
                    tools:layout_editor_absoluteX="150dp"
                    tools:layout_editor_absoluteY="8dp" />

                <com.blueapps.egyptianwriter.CheckableImageButton
                    android:id="@+id/vertical_orientation_bottom"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/icon_background"
                    android:contentDescription="@string/content_description_vertical_orientation_bottom"
                    android:layout_marginTop="4dp"
                    app:srcCompat="@drawable/vertical_align_bottom"
                    tools:layout_editor_absoluteX="198dp"
                    tools:layout_editor_absoluteY="8dp" />

                <LinearLayout
                    android:id="@+id/sep2"
                    android:layout_width="2dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/settings_seperator"
                    android:orientation="horizontal"
                    tools:layout_editor_absoluteX="246dp"
                    tools:layout_editor_absoluteY="8dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.blueapps.egyptianwriter.CheckableImageButton
                    android:id="@+id/writing_direction_ltr"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/icon_background"
                    android:checked="true"
                    android:clickable="false"
                    android:contentDescription="@string/content_description_writing_direction_ltr"
                    android:layout_marginTop="4dp"
                    app:srcCompat="@drawable/format_textdirection_l_to_r_"
                    tools:layout_editor_absoluteX="248dp"
                    tools:layout_editor_absoluteY="8dp" />

                <com.blueapps.egyptianwriter.CheckableImageButton
                    android:id="@+id/writing_direction_rtl"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/icon_background"
                    android:contentDescription="@string/content_description_writing_direction_rtl"
                    android:layout_marginTop="4dp"
                    app:srcCompat="@drawable/format_textdirection_r_to_l"
                    tools:layout_editor_absoluteX="296dp"
                    tools:layout_editor_absoluteY="8dp" />

            </LinearLayout>

        </com.google.android.flexbox.FlexboxLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>